--- a/custom_components/donghang_lottery/manifest.json
+++ b/custom_components/donghang_lottery/manifest.json
@@ -1,14 +1,14 @@
 {
   "domain": "donghang_lottery",
   "name": "동행복권",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "documentation": "https://github.com/1bobby-git/HA-DongHang-Lottery",
   "issue_tracker": "https://github.com/1bobby-git/HA-DongHang-Lottery/issues",
   "config_flow": true,
   "requirements": [
-    "beautifulsoup4==4.12.3",
-    "html5lib==1.1",
-    "pycryptodome==3.20.0"
+    "beautifulsoup4>=4.13.0",
+    "html5lib>=1.1",
+    "pycryptodome>=3.20.0"
   ],
   "iot_class": "cloud_polling",
   "codeowners": [
