feat: v1.0.7 - 구매 기능 확장 및 구매/당첨내역 기기 추가
- 로또6/45 반자동 구매 (genType=2) 추가
- 연금복권720+ 수동 구매 및 유연한 수량 지원
- 릴레이 모드 구매 차단 (직접 연결만 허용)
- common.do 의존성 제거 (로그인/회차 조회 성능 개선)
- _conn_pro/_make_order 파라미터 유연화
- 구매/당첨내역 기기: 동적 binary sensor로 구매 이력 표시
- 로또6/45 티켓 상세 조회 (게임별 번호/당첨 정보)
- 동시 요청 처리 (asyncio.Semaphore) 및 실시간 데이터 갱신

--- a/custom_components/donghang_lottery/services.yaml
+++ b/custom_components/donghang_lottery/services.yaml
@@ -21,7 +21,7 @@ buy_lotto645:
       example: 3
     mode:
       name: Mode
-      description: auto or manual.
+      description: auto, manual, or semi_auto.
       example: "auto"
     numbers:
       name: Numbers
@@ -34,12 +34,28 @@ buy_lotto645:
 
 buy_pension720:
   name: Buy Pension 720+
-  description: Purchase Pension 720+ (auto).
+  description: Purchase Pension 720+ tickets.
   fields:
     entry_id:
       name: Entry ID
       description: Optional config entry id.
       example: "0123456789abcdef"
+    mode:
+      name: Mode
+      description: auto or manual.
+      example: "auto"
+    count:
+      name: Count
+      description: Number of tickets (1-5).
+      example: 5
+    numbers:
+      name: Numbers
+      description: Manual numbers (list of "GNNNNNN" strings, G=group 1-5).
+      example: ["2123456"]
+    use_my_numbers:
+      name: Use stored numbers
+      description: Use saved my numbers for manual purchase.
+      example: true
 
 fetch_lotto645_result:
   name: Fetch Lotto 6/45 result
